test/parser/fail/noarglambda.ang
f : forall a:Type . List a -> List Nat
f = map (\ -> 2)
